--- a/Css/style.css
+++ b/Css/style.css
@@ -449,6 +449,57 @@ margin-right: 0;
   height: 100vh;
   background: url(../img/intro-bg.jpg) no-repeat center;
   background-size: cover;
+ padding-top: 263px; 
+}
+.intro__title{
+    max-width: 619px;
+    font-weight: 500;
+    font-size: 50px;
+    line-height: 60px;
+    color: white;
+    margin-bottom: 22;
+}
+.intro__subtitle{
+    max-width: 546px;
+    color: white;
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 59px;
+}
+.search-form__info{
+    display: flex;
+    flex-wrap: wrap;
+}
+.search-form__field{
+    width: 297px;
+    background: transparent url(../img/svg/circle-ico.svg) no-repeat left 7px;
+    background-size: 20px;
+    border: 0;
+    border-bottom: 2px solid #BFC0C5;
+    margin-right: 60px;
+    padding-left: 43px;
+    padding-bottom: 22px;
+    font-weight: 500;
+    font-size: 18px;
+    color: #fff;
 }
 
+.search-form__field::placeholder{
+    font-weight: 500;
+    font-size: 18px;
+    color: #fff;   
+}
+
+.search-form__submit{
+    padding: 15px 39px;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 24px;
+    color: white;
+    background: #1B7DFF;
+    border: 0;
+}
+.search-form__submit:hover, .search-form__submit:focus, .search-form__submit:active{
+    background: #033372;
+}
 /* Intro styles end */
