--- a/Css/style.css
+++ b/Css/style.css
@@ -477,7 +477,7 @@ margin-right: 0;
   background: url(../img/intro-bg.jpg) no-repeat center;
   background-size: cover;
   padding-top: 263px; 
-  padding-bottom: 223px;
+  padding-bottom: 300px;
 }
 .intro__title{
     max-width: 619px;
@@ -707,3 +707,127 @@ transform: scale(1.05);
 }
 
 /* Places styles end */
+
+
+/* Tour styles start */
+
+.tours{
+    margin-bottom: 139px;
+}
+
+.tour__info{
+padding-left: 47px;
+}
+
+.tours__tour{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 0 108px;
+    align-items: center;
+    margin-bottom: 77px;
+}
+
+.tour__title{
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 40px;
+    margin-bottom: 85px; 
+}
+
+.tour__desc{
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 58px; 
+}
+
+.tour__more{
+    font-size: 16px;
+    color: #006DFE;
+    text-decoration: none;
+    padding-right: 59px;
+    background: url(../img/svg/richt-ico.svg) no-repeat right center;
+}
+
+.tour__more:hover, .tour__more:focus{
+    opacity: .65; 
+}
+
+/* Tour styles end */
+
+/* Top styles start */
+.top{
+    margin-bottom: 86px;
+}
+
+.top__title{
+    margin-bottom: 54px;
+}
+
+.top__cards{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 57px;
+}
+
+.top__card-pic{
+    position: relative;
+}
+
+.top__card-stats{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-end;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(21, 24, 36, 0.6);
+    padding: 16px 25px;
+}
+
+.top__card-title{
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #fff;
+    margin: 0 auto 0 0;
+}
+
+.top__card-likes{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #fff; 
+    padding-right: 20px;
+    background: url(../img/svg/heart-ico.svg) no-repeat right;
+    margin-right: 14px;
+}
+
+.top__card-comments{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #fff; 
+    padding-right: 23px;
+    background: url(../img/svg/coments-ico.svg) no-repeat right;
+}
+
+.top__card-desc{
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 31px;
+}
+
+.top__card-more{
+    padding: 12px 19px;
+    background: #006dfe;
+    text-decoration: none;
+    color: #fff;
+    font-size: 16px;
+}
+
+.top__card-more:hover, .top__card-more:focus, .top__card-more:active {
+    background: #033372;
+}
+/* Top styles end */
