--- a/Css/style.css
+++ b/Css/style.css
@@ -442,7 +442,15 @@ textarea {
   top: 0;
   left: 0;
   width: 100%;
+  transition: .2s linear;
+  padding-bottom: 20px;
+  z-index: 999;
   }
+
+  .header_active{
+    background: #0e1d28;
+  }
+
 .hearder__wrapper{
   display: flex;
   flex-wrap: wrap;
@@ -450,10 +458,12 @@ textarea {
   justify-content: space-between;
   padding-top: 56px;
 }
+
 .header__list{
   display: flex;
   flex-wrap: wrap;
 }
+
 .header__item {
   margin-right: 82px;
 }
@@ -831,3 +841,69 @@ padding-left: 47px;
     background: #033372;
 }
 /* Top styles end */
+
+/* Videos styles start */
+
+.videos{
+    width: 100%;
+}
+
+.videos__wrapper{
+    max-width: 1440px;
+    margin: 0 auto;
+    position: relative;
+}
+.video__item{
+    padding-top: 56.25%;
+}
+
+.video__element{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+/* Videos styles end */
+
+/* footer styles start */
+.footer{
+    background: #0e1d28;
+    padding: 119px 0;
+}
+
+.footer__item{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.footer__logo{
+    width: 50%;
+}
+
+.footer__nav{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 50%;
+}
+
+.footer__menu-title{
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #fff;
+}
+
+.footer__menu-link{
+    font-weight: normal;
+    text-decoration: none;
+    color: #fff;
+    font-size: 16px; 
+    line-height: 24px; 
+}
+
+.footer__menu-link:hover, .footer__menu-link:focus, .footer__menu-link:active{
+    opacity: .75;
+}
+/* footer styles end */
